## Process this file with automake to produce Makefile.in  -*- makefile -*-

INCLUDES = -I$(srcdir) -I$(srcdir)/.. -I$(top_srcdir) -I$(top_srcdir)/src \
	-I$(top_srcdir)/intl

noinst_LIBRARIES = libmpf.a
libmpf_a_SOURCES = clear.c get_str.c iset_d.c set_d.c set_dfl_prec.c

MAINTAINERCLEANFILES = Makefile.in
