## Process this file with automake to produce Makefile.in  -*- makefile -*-

INCLUDES = -I$(srcdir) -I$(srcdir)/.. -I$(top_srcdir) -I$(top_srcdir)/src \
	-I$(top_srcdir)/intl

noinst_LIBRARIES = libmpn.a
libmpn_a_SOURCES = add_n.c addmul_1.c cmp.c divrem.c get_str.c	\
inlines.c lshift.c mp_bases.c mul.c mul_1.c mul_n.c sub_n.c submul_1.c

MAINTAINERCLEANFILES = Makefile.in
